--- a/record-doctors.html
+++ b/record-doctors.html
@@ -35,14 +35,21 @@
                         <a class="phone-header__link" href="tel:+74955040249">8 495 504 0249</a>
                         <a class="phone-header__link" href="tel:+74959336666">8 495 933 6666</a>
                     </div>
+                    <button class="btn phone__btn"></button>
                     <div class="btn-position-header">
                         <span class="cart-number">0</span>
                         <button class="btn cart-btn" type="button"></button>
                     </div>
+                    <button class="btn burger"></button>
             </div>
         </section>
         <section class="section__header-menu">
-            <div class="container">
+            <div class="container burger__container">
+                <button type="button" class="btn close__burger"></button>
+                <div class="burger__phone-position">
+                    <a class="phone-header__link" href="tel:+74955040249">8 495 504 0249</a>
+                    <a class="phone-header__link" href="tel:+74959336666">8 495 933 6666</a>
+                </div>
                 <nav class="nav">
                     <ul class="list-reset nav__menu anchor">
                         <li class="nav__item"><a href="analiz.html">Анализы и&nbsp;цены</a></li>
@@ -51,6 +58,12 @@
                         <li class="nav__item"><a href="contacts.html">Контакты</a></li>
                     </ul>
                 </nav>
+            </div>
+        </section>
+        <section class="section__mobile__btn">
+            <div class="container btn__container">
+                <button class="btn btn__header btn__header-receive" type="button">Получить результаты</button>
+                <button class="btn btn__header btn__header-sign" type="button">Записаться на&nbsp;приём</button>
             </div>
         </section>
     </header>
@@ -77,7 +90,7 @@
                                 <span class="checkbox-span">Я&nbsp;принимаю условия <a href="#">пользовательского соглашения</a> и&nbsp;даю согласие на&nbsp;обработку <a href="#">персональных данных</a></span>
                             </div>  
                         </label>
-                        <button type="submit" class="btn record__doctors-btn">Записаться</button>
+                        <button type="submit" class="btn record__doctors-btn-submit">Записаться</button>
                     </form>
                 </div>
                 <div>
