--- a/get-results.html
+++ b/get-results.html
@@ -38,14 +38,21 @@
                         <a class="phone-header__link" href="tel:+74955040249">8 495 504 0249</a>
                         <a class="phone-header__link" href="tel:+74959336666">8 495 933 6666</a>
                     </div>
+                    <button class="btn phone__btn"></button>
                     <div class="btn-position-header">
                         <span class="cart-number">0</span>
                         <button class="btn cart-btn" type="button"></button>
                     </div>
+                    <button class="btn burger"></button>
             </div>
         </section>
         <section class="section__header-menu">
-            <div class="container">
+            <div class="container burger__container">
+                <button type="button" class="btn close__burger"></button>
+                <div class="burger__phone-position">
+                    <a class="phone-header__link" href="tel:+74955040249">8 495 504 0249</a>
+                    <a class="phone-header__link" href="tel:+74959336666">8 495 933 6666</a>
+                </div>
                 <nav class="nav">
                     <ul class="list-reset nav__menu anchor">
                         <li class="nav__item"><a href="analiz.html">Анализы и&nbsp;цены</a></li>
@@ -54,6 +61,12 @@
                         <li class="nav__item"><a href="contacts.html">Контакты</a></li>
                     </ul>
                 </nav>
+            </div>
+        </section>
+        <section class="section__mobile__btn">
+            <div class="container btn__container">
+                <button class="btn btn__header btn__header-receive" type="button">Получить результаты</button>
+                <button class="btn btn__header btn__header-sign" type="button">Записаться на&nbsp;приём</button>
             </div>
         </section>
     </header>
@@ -71,7 +84,7 @@
                             <button class="btn input-date btn-data" type="button" disabled></button>
                         </div>
                         <span class="record-doctors__caption-form">Номер заказа</span>
-                        <input class="record-doctors__input-form" type="number">
+                        <input class="record-doctors__input-form last-input" type="number">
                         <label for="check" class="label">
                             <div class="check-div">
                                 <input class="checkbox" type="checkbox" name="check" id="check">
