--- a/feedback.html
+++ b/feedback.html
@@ -80,7 +80,7 @@
                         <span class="record-doctors__caption-form">Ваш email</span>
                         <input class="record-doctors__input-form" type="email">
                         <span class="record-doctors__caption-form">Ваш отзыв</span>
-                        <textarea class="record-doctors__textarea-form feedback-doctors__textarea-form"></textarea>
+                        <textarea class="record-doctors__textarea-form feedback-doctors__textarea-form feddback__text-area"></textarea>
                         <div class="g-recaptcha" data-sitekey="6Lev7bwaAAAAAHBQa_q0q-MMeA27-BdfgOxIjOMS"></div>
                         <div class="text-danger" id="recaptchaError"></div>
                         <button type="submit" class="btn record__doctors-btn">Отправить</button>
