--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
                 </div>
             </section>
         </div>
+        <div class="container record__container">
             <section class="section__record">
-                <div class="container">
                     <div class="record__position">
                         <div class="record__text-position">
                             <h3 class="record__caption">Запишитесь на&nbsp;приём</h3>
@@ -252,8 +252,8 @@
                             </form>
                         </div>
                     </div>
-                </div>
             </section>
+        </div>
         <div class="modal" id="modal-1">
             <div class="modal__content">
                 <button class="btn popup-close1 second-modal-close"></button>
