--- a/contacts.html
+++ b/contacts.html
@@ -38,14 +38,21 @@
                         <a class="phone-header__link" href="tel:+74955040249">8 495 504 0249</a>
                         <a class="phone-header__link" href="tel:+74959336666">8 495 933 6666</a>
                     </div>
+                    <button class="btn phone__btn"></button>
                     <div class="btn-position-header">
                         <span class="cart-number">0</span>
                         <button class="btn cart-btn" type="button"></button>
                     </div>
+                    <button class="btn burger"></button>
             </div>
         </section>
         <section class="section__header-menu">
-            <div class="container">
+            <div class="container burger__container">
+                <button type="button" class="btn close__burger"></button>
+                <div class="burger__phone-position">
+                    <a class="phone-header__link" href="tel:+74955040249">8 495 504 0249</a>
+                    <a class="phone-header__link" href="tel:+74959336666">8 495 933 6666</a>
+                </div>
                 <nav class="nav">
                     <ul class="list-reset nav__menu anchor">
                         <li class="nav__item"><a href="analiz.html">Анализы и&nbsp;цены</a></li>
@@ -56,6 +63,12 @@
                 </nav>
             </div>
         </section>
+        <section class="section__mobile__btn">
+            <div class="container btn__container">
+                <button class="btn btn__header btn__header-receive" type="button">Получить результаты</button>
+                <button class="btn btn__header btn__header-sign" type="button">Записаться на&nbsp;приём</button>
+            </div>
+        </section>
     </header>
     <main class="contacts-block">
         <div class="container">
@@ -64,10 +77,10 @@
                 Специалисты Медико-санитарной части аэропорта Домодедово окажут квалифицированную помощь и&nbsp;проконсультируют пассажиров, работников и&nbsp;посетителей аэропорта. В&nbsp;случае необходимости оказания медицинской помощи в&nbsp;зонах вылета международных и&nbsp;внутренних воздушных линий просим вас позвонить по&nbsp;короткому номеру <span class="text-decoration">*1120</span> или по&nbsp;телефонам <span class="text-decoration">+7 495 504-02-49</span> и&nbsp;<span class="text-decoration">+7 495 933-66-66</span>, или с&nbsp;помощью телефона, расположенного рядом с&nbsp;выходом на&nbsp;посадку №32 в&nbsp;галерее вылета внутренних воздушных линий.
             </p>
             <div class="contacts__image-position">
-                <div class="contacts__image-block">
+                <div class="contacts__image-block margin__img">
                     <img src="img/contacts_clinic_1.jpg" alt="">
                 </div>
-                <div class="contacts__image-block">
+                <div class="contacts__image-block margin__img">
                     <img src="img/contacts_clinic_2.jpg" alt="">
                 </div>
                 <div class="contacts__image-block">
@@ -94,7 +107,7 @@
                     <a class="info__mail" href="mailto:mail@example.com">mail@example.com</a>
                     <h3 class="contacts__small-caption">Расписание:</h3>
                     <p class="info__time-text">
-                        Медицинский центр работает ежедневно круглосуточно
+                        Медицинский центр работает ежедневно и&nbsp;круглосуточно
                     </p>
                 </div>
             </div>
@@ -121,7 +134,7 @@
                 </div>
             </div>
         </div>
-        <div class="container">
+        <div class="container disable-container">
             <section class="section__record">
                     <div class="record__position">
                         <div class="record__text-position">
