--- a/doctors.html
+++ b/doctors.html
@@ -130,6 +130,7 @@
                             <p class="doctors__name">Коваль Людмила Валерьевна</p>
                             <p class="doctors__proffesio">Педиатр</p>
                             <p class="doctors__work">Стаж: <span class="work-decorate">11&nbsp;лет</span></p>
+                            <ul class="list-reset doctors__list"></ul>
                             <p class="description__price-doctors">Стоимость приёма:</p>
                             <p class="price-doctors">1 500 р.</p>
                             <button class="btn doctors-btn">Записаться на приём</button>
