--- a/open-results.html
+++ b/open-results.html
@@ -88,7 +88,7 @@
                      <button class="btn action__link action__link-print" href="#">Распечатать</button>
                 </div>
             </div>
-            <div class="container">
+            <div class="container open__results-mobile-container">
             <div class="analiz-results">
                 <h3 class="analiz__caption">Микроскопическое исследование женского мазка (3&nbsp;точки)</h3>
                 <div class="analiz__description-position">
